Elements have a class

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,2 +1,5 @@
-$ham_overlayColor: rgba(20, 40, 50, 0.9);
+$ham_overlayColor: rgba(136, 0, 0, 0.5);
 $ham_menuSpeed: 0.7s;
+$ham_buttonColor: #fff;
+$ham_fontColor: #fff;
+$ham_circleSize: 240vw;
