--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -33,10 +33,10 @@
       & ~ .menu {
         &__content {
           visibility: visible;
-          & > div {
+          & > .menu__innerBody {
             transform: scale(1);
             transition-duration: $ham_menuSpeed;
-            & > div {
+            & > .menu__nav {
               opacity: 1;
             }
           }
@@ -56,31 +56,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
 
-    & > div {
-      position: relative;
+  &__hamLines {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: $ham_buttonColor;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+
+    &:before,
+    &:after {
+      content: "";
+      position: absolute;
+      z-index: 1000;
+      top: -10px;
       width: 100%;
       height: 2px;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: 0.3s;
+      background: inherit;
+    }
 
-      &:before,
-      &:after {
-        content: "";
-        position: absolute;
-        z-index: 1000;
-        top: -10px;
-        width: 100%;
-        height: 2px;
-        background: inherit;
-      }
-
-      &::after {
-        top: 10px;
-      }
+    &::after {
+      top: 10px;
     }
   }
 
@@ -95,38 +95,37 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
 
-    & > div {
-      background: $ham_overlayColor;
-      border-radius: 50%;
-      width: 200vw;
-      height: 200vw;
-      display: flex;
-      flex: none;
-      align-items: center;
-      justify-content: center;
-      transform: scale(0);
-      transition: 0.3s;
+  &__innerBody {
+    background: $ham_overlayColor;
+    border-radius: 50%;
+    width: $ham_circleSize;
+    height: $ham_circleSize;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: 0.3s;
+  }
 
-      & > div {
-        text-align: center;
-        max-width: 90vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: 0.3s;
+  &__nav {
+    text-align: center;
+    max-width: 90vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: 0.3s;
+  }
 
-        & > ul {
-          & > li {
-            list-style: none;
-            color: #fff;
-            font-size: 1.5rem;
-            padding: 1rem;
-            & > a {
-              transition: 0.3s;
-            }
-          }
-        }
-      }
-    }
+  &__element {
+    list-style: none;
+    color: $ham_fontColor;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+
+  &__link {
+    transition: 0.3s;
   }
 }
